--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,14 @@
 	<classpathentry exported="true" kind="lib" path="lib/jcalendar-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-4.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mssql-jdbc-12.6.1.jre11.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections4-4.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-compress-1.21.jar"/>
+	<classpathentry kind="lib" path="lib/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/poi-4.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-4.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-4.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/xmlbeans-3.0.2.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
 		<attributes>
 			<attribute name="module" value="true"/>
