--- a/.classpath
+++ b/.classpath
@@ -14,6 +14,7 @@
 	<classpathentry kind="lib" path="lib/poi-ooxml-4.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-4.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/xmlbeans-3.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.5.4.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
 		<attributes>
 			<attribute name="module" value="true"/>
